fix bottom styles and add text align to link

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -14,9 +14,10 @@ form {
     }
 
     button {
-        padding: 12px 105px;
+        padding: 12px 99px;
         margin-bottom: 36px;
         border-radius: 10px;
+        width: 310px;
         background: #0093D3;
         border: none;
         color: #fff;
@@ -28,6 +29,7 @@ form {
     a {
         color: #1E1E1E;
         font-size: 14px;
+        text-align: center;
     }
 }
 
